fix field validation a GroupMembership support